remove: deprecated pandas function

--- a/notebooks/experiment.ipynb
+++ b/notebooks/experiment.ipynb
@@ -693,7 +693,7 @@
     "    if results is None:\n",
     "        results = df_result\n",
     "    else:\n",
-    "        results = results.append(df_result)\n",
+    "        results = pd.concat([results, df_result], ignore_index=True)\n",
     "\n",
     "results, filename = lt.prepare_results_from_df(results)\n",
     "# get a list of columns\n",
